# dbt-assesment

./: README.md  dbt_project.yml  pyproject.toml  query_duckdb.py
models/: provider_address_agg.sql  provider_types.sql
provider_pipeline/: dbt_project.yml  dev.duckdb
provider_pipeline/models/: provider_address_agg.sql  provider_types.sql  schema.yml
