[tool.poetry]
name = "dbt_assessment"
version = "0.1.0"
description = "A project for dbt assessment"
authors = ["AvinashR2 <rakha1@gene.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "provider_pipeline"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.3.0"
dbt-core = "^1.0.0"
dbt-duckdb = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

